[project]
name = "camq-tools"
version = "0.1.0"
description = "A Python library for extracting and processing air quality model data from AELMO NetCDF files"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "CAMQ Tools Team"}
]
keywords = ["air-quality", "atmospheric-modeling", "netcdf", "data-extraction", "aelmo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "netcdf4>=1.7.4",
    "polars>=1.37.1",
    "pyproj>=3.7.2",
    "wztools>=2026.1.6",
    "xarray>=2025.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
]
examples = [
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/camq-tools"
Repository = "https://github.com/your-org/camq-tools.git"
Documentation = "https://camq-tools.readthedocs.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camq_tools"]
